--- a/src/css-snippets/long-text-ellipsis/index.html
+++ b/src/css-snippets/long-text-ellipsis/index.html
@@ -1,11 +1,14 @@
-<html><!DOCTYPE html>
-<head>
-    
-</head>
+<!doctype html>
+<html>
+    <head>
+        <link href="./style.css" rel="stylesheet" type="text/css" />
+    </head>
 
-<body>
-Html
+    <body>
+        <h2>text-overflow: clip (default):</h2>
+        <div class="a" title="Hello world">Hello world!</div>
 
-</body>
-
+        <h2>text-overflow: ellipsis:</h2>
+        <div class="b" title="Hallo World">Hello wollllllly world!</div>
+    </body>
 </html>
