--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width" />
+        <title>Html</title>
+        <link href="./styles/style.css" rel="stylesheet" type="text/css" />
+    </head>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Html</title>
-  <link href="./styles/style.css" rel="stylesheet" type="text/css" />
-</head>
-
-<body>
-  <main>
-Html page
-  </main>
-
-  <script type="module" src="./scripts/script.js"></script>
-
-</body>
-
+    <body>
+        <main>Html ppage</main>
+        <script type="module" src="./scripts/script.js"></script>
+    </body>
 </html>
